# contractive-diffusion-policy

./: .gitignore  CONTRIBUTION.md  README.md  all_exps.bash  cd_edp_kitchen.py  contractive_dbc_pusht.py  contractive_dbc_pusht_image.py  contractive_dql.py  contractive_edp.py  dbc_exps.bash  dbc_robomimic.py  dbc_robomimic_image.py  edp_exps.bash  il_baselines.bash  il_cdp.bash  il_exps.bash  normal_dql.py  offline_rl_baselines.bash  offline_rl_benchmarks.bash  offline_rl_cdp.bash  offline_rl_exps.bash  pyproject.toml  qdl_exps.bash  requirements.txt  setup.py
baselines/: dp_il.py  dql_rl.py  idql_d4rl.py  idql_rl.py
configs/cd_edp/kitchen/: kitchen.yaml
configs/cdp/: main.yaml  optuna.yaml
configs/cdp-il/robomimic_image/task/: square.yaml
configs/cdp-il/robomimic_lowdim/task/: square.yaml  transport.yaml
configs/cdp-rl/task/: kitchen-complete-v0.yaml
configs/dbc/pusht/: pusht.yaml  pusht_image.yaml
configs/dbc/robomimic_image/: main.yaml
configs/dbc/robomimic_lowdim/: main.yaml
configs/dql/: main.yaml
configs/dql/kitchen/: kitchen.yaml
configs/edp/: main.yaml  optuna.yaml
configs/edp/kitchen/: kitchen.yaml
configs/idql/: main.yaml
configs/idql/kitchen/: kitchen.yaml
configs/idql/task/: kitchen-complete-v0.yaml
pipelines/: dql_d4rl_kitchen.py  idql_d4rl_kitchen.py
scripts/: cdp_il_img.py  cdp_il_low.py  cdp_il_lowdim.py  cdp_rl.py  hyperparam_tuning.py  power_iters.py
source/: contraction_loss.py  contractive_diffusion.py
src/: contraction_diffusion.py  contraction_loss.py  sim_eval.py  utils.py
test/: eigen.py  gaussian_plots.py
(+8 files in other folders)
